--- a/test/bai kho.html
+++ b/test/bai kho.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<table width="50%" border="1">
+<caption>Thời Khóa Biểu CO321k2</caption>
+    <tr>
+    <th colspan="3"></th>
+    <th bgcolor="yellow">Thứ Ba</th>
+    <th bgcolor="yellow">Thứ Năn</th>
+    <th bgcolor="yellow">Thứ Bảy</th>
+</tr>
+<tr bgcolor="#d2691e">
+    <th width="10%">Tuần</th>
+   <th>Ngày Bắt Đầu</th>
+    <th>Ngày Kết Thúc</th>
+    <th colspan="3">Môn Học</th>
+</tr>
+<tr>
+    <td width="10%">01</td>
+    <td>01/09/1999</td>
+    <td>01/06/2000</td>
+    <td>Văn</td>
+    <td>Toán</td>
+    <td>Anh</td>
+</tr>
+<tr>
+    <td width="10%">02</td>
+    <td>01/02/2000</td>
+    <td>01/03/2001</td>
+    <td>Anh</td>
+    <td>Văn</td>
+    <td>Sinh</td
+</tr>
+
+</table>
+
 </body>
 </html>
