--- a/ve ban co.html
+++ b/ve ban co.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<table width="100%" bgcolor="yellow">
+<table width="50%" bgcolor="yellow" style="height: 650px" align="center">
 <tr>
     <th></th>
     <th>1</th>
@@ -42,7 +42,7 @@
 </tr>
 <tr>
     <th>C</th>
-    <th></th>
+    <th bgcolor="white"></thbg>
     <th bgcolor="black"></th>
     <th bgcolor="white"></th>
     <th bgcolor="black"></th>
