--- a/java.html
+++ b/java.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
+<body id="nen">
+<p id="hello" onmouseover="document.getElementById('hello').style.color='red'">xin chao</p>
+<input type="radio" name="sang" onclick="document.getElementById('hello').style.fontSize='100px'">sang <input
+        type="radio" name="sang" onclick="document.getElementById('hello').style.fontSize='80px'">toi
+<p id="text" style="font-size: 60px" onmouseover="document.getElementById('text').style.fontSize='120px'"
+   onmouseout="document.getElementById('text').style.fontSize='30px'">Abc</p>
 <body>
-$END$
-</body>
-</html>
+</html>.
