--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let year = parseInt(prompt("tai sao kho vay"))
+    if ( year %4 ==0 ) {
+    if ( year %100 ==0){
+    if ( year %400 ==0) {
+        alert(year + "is a leap year");
+    }else {
+        alert(year + "is not a leap year");
+    }
+    }else {
+        alert(year + "is a leap year");
+    }
+        }else {
+        alert(year + "is not a leap year");
+    }
+
+</script>
 </body>
 </html>
