--- a/java.html
+++ b/java.html
@@ -6,9 +6,9 @@
 </head>
 <body id="nen">
 <p id="hello" onmouseover="document.getElementById('hello').style.color='red'">xin chao</p>
-<input type="radio" name="sang" onclick="document.getElementById('hello').style.fontSize='100px'">sang <input
-        type="radio" name="sang" onclick="document.getElementById('hello').style.fontSize='80px'">toi
+<input type="radio" name="sang" onclick="document.getElementById('nen').style.backgroundColor='red'">sang <input
+        type="radio" name="sang" onclick="document.getElementById('nen').style.backgroundColor='blue'">toi
 <p id="text" style="font-size: 60px" onmouseover="document.getElementById('text').style.fontSize='120px'"
    onmouseout="document.getElementById('text').style.fontSize='30px'">Abc</p>
-<body>
-</html>.
+</body>
+</html>
