--- a/test/name.html
+++ b/test/name.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+let number = +prompt("nhap diem")
+if ( 75<=number){
+    alert("la loai A");
+}else if ( 60<=number){
+    alert("la loai B");
+}else if ( 40<=number){
+    alert("la loai C");
+}else {
+    alert("la loai D");
+}
+</script>
 </body>
 </html>
