--- a/thuc hanh html.html
+++ b/thuc hanh html.html
@@ -22,6 +22,9 @@
         <br/>Image courtesy CERN
     </p>
 </a>
+    <button type="text" onclick="bt ti roi">thao</button>
+
+
 
 </body>
 </html>
