--- a/thuc tap.html
+++ b/thuc tap.html
@@ -5,30 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="showMessage();">Click Me!</button>
-<script>
-    function showMessage(){
-        alert('Xin chào!');
-    }
-</script>
-<div id="messageDiv"></div>
-<button type="button" onclick="thao();">Click Me!</button>
-<script>
-    function thao(){
-        document.getElementById('messageDiv').innerHTML = 'Xin chào!';
-    }
-</script>
-<button type="button" onclick="pham();">Click Me!</button>
-<script>
-    function pham(){
-        document.write('Xin chào!');
-    }
-</script>
-<button type="button" onclick="ut();">Click Me!</button>
-<script>
-    function ut(){
-        console.log('Xin chào!');
-    }
+<button type="button" onclick="showMessage()" ;>Click Me!</button>
+<script src="test/demo.js">
+
 </script>
 </body>
 </html>
